# planeta

./: .gitignore  Dockerfile  app.db  commands.py  config.py  nixpacks.toml  pyproject.toml  requirements.txt
app/: __init__.py  commands.py  extensions.py  forms.py  models.py  utils.py
app/auth/: routes.py
app/dashboard/: __init__.py  routes.py
app/dashboard/routes/: __init__.py  (+8 more)
app/main/: routes.py
app/templates/: base.html
migrations/versions/: 0590c4572ef1_add_footer_settings_to_settings_model.py  0db2e245681a_adiciona_tabela_lead_para_contatos.py  0f2210693b65_add_business_name_and_description_to_.py  145fd6da325e_add_feature_flags_and_hero_colors_to_.py  15eaa318f1a9_simplify_homepage_feature_flags_to_main_.py  16a89adacdca_add_feature_flags_and_hero_colors_to_.py  29cb3457c5af_add_landingpage_model.py  3fe06ed40d42_cria_modelos_para_conteúdo_da_homepage.py  4332152b299a_cria_tabela_de_configuracoes.py  579aff53ae65_add_is_approved_and_update_role_default_.py  5e80eb940d3c_adiciona_campo_de_status_aos_leads.py  6938492d1f67_cria_tabela_de_clientes.py  7ae53bc9acc0_add_section_order_to_homepagecontent.py  7b95c9e31cb4_create_popup_model.py  8b95bbbd82f2_new_bd.py  8ed2e1195f81_cria_modelos_para_conteúdo_da_homepage.py  934c7ee2f84b_adiciona_campo_cover_image_ao_post.py  c1b1a4d23c9b_add_roles_permissions_and_approval_.py  c5579fedfbaf_add_email_to_client_model.py  ce9637be8efb_add_clientservice_model.py  e06674f6a265_adiciona_modelos_landingpage_e_.py  ed144ee165a3_versão_inicial_do_banco_de_dados.py  eee08a47f3be_add_display_mode_to_popup_model.py
(+42 files in other folders)
