[project]
name = "setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "alembic==1.16.5",
    "blinker==1.9.0",
    "click==8.2.1",
    "dnspython==2.7.0",
    "email-validator==2.3.0",
    "et-xmlfile==2.0.0",
    "flask==3.1.2",
    "flask-admin==1.6.1",
    "flask-login==0.6.3",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.2",
    "greenlet==3.2.4",
    "gunicorn==23.0.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "numpy==1.26.4",

    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.2.2",
    "psycopg2-binary==2.9.10",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-slugify==8.0.4",
    "pytz==2025.2",
    "six==1.17.0",
    "sqlalchemy==2.0.43",
    "text-unidecode==1.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "werkzeug==3.1.3",
    "wtforms==3.2.1",
    "wtforms-sqlalchemy==0.4.2",
]
